<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragment.CurrencyFragment"
    tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- UNITED STATES CURRENCY VALUE -->
            <!--suppress AndroidUnknownAttribute -->
            <TextView
                android:id="@+id/baseCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/baseCurrency"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider" />

            <!-- LAST UPDATED -->
            <!--suppress AndroidUnknownAttribute -->
            <TextView
                android:id="@+id/lastUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/last_updated"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <!-- NEXT UPDATE -->
            <!--suppress AndroidUnknownAttribute -->
            <TextView
                android:id="@+id/nextUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/next_update"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- AUSTRALIA CURRENCY VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/aud"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/aud"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!-- BRITISH POUND CURRENCY VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/gbp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/gbp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- CANADA CURRENCY VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/cad"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cad"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!-- EURO MEXICO VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/mxn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/mxn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- EURO CURRENCY VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/eur"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/eur"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!-- NEW ZEALAND CURRENCY VALUE -->
                <!--suppress AndroidUnknownAttribute -->
                <TextView
                    android:id="@+id/nzd"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ndz"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>



        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"

            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                style="background"
                android:layout_width="match_parent"

                android:layout_height="match_parent"

                app:autoPlay="true"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:videoId="S0Q4gqBUs7c" />

        </androidx.cardview.widget.CardView>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>