<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:orientation="vertical"
        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/translate_from"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,TextViewEdits" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                <Button
                    android:id="@+id/detect_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detect_language"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_languages"
                    android:layout_gravity="left"
                    />

                <ListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>
            </LinearLayout>


<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardView"-->
<!--            android:layout_width="90dp"-->
<!--            android:layout_height="90dp"-->
<!--            android:layout_marginEnd="14dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            app:cardBackgroundColor="@android:color/white"-->
<!--            app:cardCornerRadius="6dp"-->
<!--            app:cardElevation="2dp">-->



<!--        </androidx.cardview.widget.CardView>-->

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>